2012-03-20  Mike Fenton  <mifenton@rim.com>

        [BlackBerry] Crash when dragging the FCC caret over an invalid node.
        https://bugs.webkit.org/show_bug.cgi?id=81654

        Reviewed by Rob Buis.

        PR 144505.

        The position did not have a valid container node and was causing
        a crash.  Validate the node pointer before using it.

        * WebKitSupport/DOMSupport.cpp:
        (BlackBerry::WebKit::DOMSupport::DOMContainerNodeForPosition):

2012-03-20  Jason Liu  <jason.liu@torchmobile.com.cn>

        [BlackBerry]Cookies shouldn't be set into each of webcore's request and platform's request. And this makes a regression.
        https://bugs.webkit.org/show_bug.cgi?id=80800

        Reviewed by George Staikos.

        * WebCoreSupport/FrameLoaderClientBlackBerry.cpp:
        (WebCore::FrameLoaderClientBlackBerry::dispatchDecidePolicyForNavigationAction):
        (WebCore::FrameLoaderClientBlackBerry::dispatchWillSendRequest):
        (WebCore::FrameLoaderClientBlackBerry::decidePolicyForExternalLoad):

2012-03-19  Adam Barth  <abarth@webkit.org>

        Remove support for "magic" iframe
        https://bugs.webkit.org/show_bug.cgi?id=81590

        Reviewed by Eric Seidel.

        Remove FrameLoaderClient methods that no longer exist.

        * WebCoreSupport/FrameLoaderClientBlackBerry.cpp:
        (WebCore):
        * WebCoreSupport/FrameLoaderClientBlackBerry.h:
        (FrameLoaderClientBlackBerry):
        (WebCore::FrameLoaderClientBlackBerry::didDetectXSS):

2012-03-19  Tyler Abbott  <tabbott@rim.com>

        [BlackBerry] speed up text selection for large selections
        https://bugs.webkit.org/show_bug.cgi?id=81536

        When selecting large disjoint areas of text the cost
        of calculating the IntRectRegion union becomes very
        expensive. Simply placing all of the text quads into
        the IntRectRegion is faster despite the larger memory
        footprint and the additional calculations at render